<resources>
    <string name="app_name">NEJM医学前沿</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">首页</string>
    <string name="title_my_knowledge">新知</string>
    <string name="title_papers">期刊</string>
    <string name="title_videos">视频</string>
    <string name="title_my">我的</string>
    <string name="request_update_storage">请求更新存储权限</string>
</resources>
