<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_my_knowledge"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_my_knowledge" />

    <item
        android:id="@+id/navigation_papers"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_papers" />
    <item
        android:id="@+id/navigation_videos"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_videos" />
    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_my" />

</menu>
